sumo/tests/duarouter/errors/unknown_vType_ignore/errors.duarouter
Warning: Ignoring uknown vehicle type 'foo'
